<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.escuchayacierta.Resultado">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo_ganador"
        android:id="@+id/ivFondoResultado"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvResultado"
        android:text="@string/resultadooGanador"
        android:textSize="40dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#FAFAFA"
        android:background="#5f8ec4"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="Menu"
        android:text="@string/menu"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:padding="5sp"
        android:fontFamily="casual"
        android:background="#5f8ec4"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvPpuntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvResultado"
        android:text="@string/puntos"
        android:padding="5sp"
        android:textSize="40dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#FAFAFA"
        android:background="#5f8ec4"/>

</RelativeLayout>
